--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "url": "https://github.com/we-make-websites/wmw-technical-test.git"
   },
   "devDependencies": {
-    "@we-make-websites/stylelint-config": "^1.0.1",
     "@shopify/slate-tools": "1.0.0-beta.19",
+    "@we-make-websites/stylelint-config": "^1.0.2",
     "babel-preset-shopify": "^16.2.0",
     "eslint-plugin-shopify": "^19.0.0",
+    "stylelint": "^12.0.1",
     "stylelint-config-prettier": "^3.0.4"
   },
   "dependencies": {
@@ -29,9 +30,19 @@
     "@shopify/theme-currency": "3.0.0",
     "@shopify/theme-images": "3.0.0",
     "@shopify/theme-sections": "3.0.0",
+    "flickity": "^2.2.1",
+    "grunt": "^1.0.4",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "jquery": "^3.2.1",
     "lodash-es": "^4.17.4",
+    "node-sass": "^4.13.0",
     "normalize.css": "^7.0.0"
+  },
+  "stylelint": {
+    "extends": [
+      "@we-make-websites/stylelint-config"
+    ]
   },
   "scripts": {
     "start": "slate-tools start",
@@ -39,6 +50,7 @@
     "deploy": "slate-tools build && slate-tools deploy",
     "zip": "slate-tools build && slate-tools zip",
     "lint": "slate-tools lint",
-    "format": "slate-tools format"
+    "format": "slate-tools format",
+    "stylelint": "stylelint 'src/**/*.scss'"
   }
 }
